[gd_scene load_steps=26 format=2]

[ext_resource path="res://HUD/intro_assets/lensflare0_alpha.png" type="Texture" id=1]
[ext_resource path="res://HUD/intro_assets/intro_background_tree.png" type="Texture" id=2]
[ext_resource path="res://Recursos/Fuentes/general_ui/LeagueSpartan-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://HUD/intro_assets/dialog_frame.png" type="Texture" id=4]
[ext_resource path="res://HUD/batalla.gd" type="Script" id=5]
[ext_resource path="res://Sounds/travel_nord.ogg" type="AudioStream" id=6]
[ext_resource path="res://Sounds/horse_canter_3.ogg" type="AudioStream" id=7]
[ext_resource path="res://Sounds/bandit_fight.ogg" type="AudioStream" id=8]
[ext_resource path="res://Sounds/thunder.ogg" type="AudioStream" id=9]
[ext_resource path="res://Sounds/man_death_1.ogg" type="AudioStream" id=10]
[ext_resource path="res://Sounds/d_chicken1.ogg" type="AudioStream" id=11]
[ext_resource path="res://Sounds/town_loop_3.ogg" type="AudioStream" id=12]
[ext_resource path="res://Sounds/town_neutral.ogg" type="AudioStream" id=13]

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.252641, 0.386336 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Animation" id=8]
resource_name = "enter"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("bg:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("bg:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "exit_slow"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("bg:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("bg:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "st"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("bg:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("bg:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="DynamicFont" id=3]
size = 30
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=5]
resource_name = "rs"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ui/container/text:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ui/container/text:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "write_intro_text"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("ui/container/text:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ui/container/text:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("enfasis:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("enfasis2:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=11]
resource_name = "fadeaudio"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("enfasis:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -40.0 ]
}

[sub_resource type="Animation" id=12]
resource_name = "fadeaudio2"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("enfasis2:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -40.0 ]
}

[sub_resource type="Animation" id=13]
resource_name = "fadeaudio3"

[node name="batalla" type="Node"]
script = ExtResource( 5 )

[node name="ui" type="CanvasLayer" parent="."]

[node name="background" type="TextureRect" parent="ui"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="parts" type="CPUParticles2D" parent="ui"]
material = SubResource( 2 )
position = Vector2( 662, 366 )
amount = 200
speed_scale = 0.1
texture = ExtResource( 1 )
emission_shape = 1
emission_sphere_radius = 200.0
radial_accel = 2400.0
scale_amount = 0.5
scale_amount_curve = SubResource( 1 )
color = Color( 0.239216, 0.341176, 1, 0.25098 )

[node name="trans_container" type="Control" parent="ui"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="bg" type="ColorRect" parent="ui/trans_container"]
modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="trans_anim" type="AnimationPlayer" parent="ui/trans_container"]
autoplay = "st"
anims/enter = SubResource( 8 )
anims/exit_slow = SubResource( 6 )
anims/st = SubResource( 9 )

[node name="container" type="Control" parent="ui"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="frame" type="TextureRect" parent="ui/container"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -902.0
margin_top = -230.0
margin_right = 903.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="text" type="Label" parent="ui/container"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -615.0
margin_top = -176.0
margin_right = 598.0
custom_colors/font_color = Color( 1, 0.933333, 0.819608, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
align = 1
autowrap = true

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "rs"
anims/rs = SubResource( 5 )
anims/write_intro_text = SubResource( 4 )

[node name="enfasis" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true

[node name="enfasis2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="enfasis3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="enfasis4" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="horse" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 10 )
anims/fadeaudio = SubResource( 11 )
anims/fadeaudio2 = SubResource( 12 )
anims/fadeaudio3 = SubResource( 13 )

[node name="thunder" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="dead" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="gallinas" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[connection signal="animation_finished" from="ui/trans_container/trans_anim" to="." method="_on_trans_anim_animation_finished"]
[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
